# fb2converter_server

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  pyproject.toml  requirements.txt
.github/workflows/: build_docker_image.yml  rust-clippy.yml
app/: config.py  main.py
docker/: build.dockerfile
scripts/: env.sh  start.sh
src/: main.rs
